downlaod resume added and portfolio updated

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 					<!-- Description Text -->
 					<!-- <hr class="hr1"> -->
 					<div class="vcard-profile-description-text">
-						<p>I have 2.5+Y experience in developing websites & web-apps, Crrently I am working as a
-							Technology Analyst at Techknomatic Services (Pune ,India) where my passion for design and
+						<p>I have 4Y experience in developing websites & web-apps, Crrently I am working as a
+							Sr. Softaware Engineer at Sazinga Digital Services PVT LMT (Pune ,India) where my passion for design and
 							development converge. You can see my previous work history on my LinkedIn Profile. </p>
 					</div>
 					<!--/ Description Text -->
@@ -139,14 +139,14 @@
 					<!-- /Section title -->
 
 					<!-- Buttons -->
-					<!-- <div class="resume-buttons header-page-buttons"> -->
+					<div class="resume-buttons header-page-buttons">
 					<!-- Download CV button -->
-					<!-- <a href="#" class="btn btn-default btn-default2"><i class="fa fa-download"></i>&nbsp; Download my resume</a> -->
+					<a href="./FullStackDev_4Y_Resume.pdf" target="_blank" class="btn btn-default btn-default2" download><i class="fa fa-download"></i>&nbsp; Get my resume</a>
 					<!-- /Download CV button -->
 					<!-- Get in Touch button -->
-					<!-- <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-download"></i>&nbsp;  Get in Touch</a> -->
+					<a href="#page-contact" class="btn btn-default btn-default2 link-page"><i class="fa fa-download"></i>&nbsp;  Get in Touch</a>
 					<!-- /Get in Touch button -->
-					<!-- </div> -->
+					</div>
 					<!-- /Buttons -->
 
 					<!-- SECTION: Work Experience -->
@@ -157,18 +157,24 @@
 						<!-- Resume Item -->
 						<div class="resume-item">
 							<!-- Work Place -->
-							<h3 class="section-item-title-1">Technomatic Services Pvt Ltd</h3>
+							<h3 class="section-item-title-1">Sazinga Digital Services Pvt. Ltd (Present) / Techknomatic Services Pvt. Ltd</h3>
 							<!-- /Work Place -->
 							<!-- Job Time -->
-							<h4 class="job"><b style="text-decoration: none !important">Work Duration</b> : <span
-									class="job-date">15 Octomber 2018 - Till Now</span></h4>
+							<h4 class="job"><b style="text-decoration: none !important">Techknomatic Services Pvt. Ltd ​ merged the development process with SAZINGA DIGITAL SERVICES PVT. LTD​ in Oct 2019.</h4>
+							<h4 class="job"><b style="text-decoration: none !important">Sr. Software Engineer</b> : <span
+								class="job-date">Octomber 2018 - Till Now</span></h4>
+							<h4 class="job"><b style="text-decoration: none !important">Technology Analyst</b> : <span
+									class="job-date">Octomber 2018 - Octomber 2019</span></h4>
 							<!-- /Job Time-->
 							<!-- content -->
 							<div class="graduation-description">
 								<p><b>Comapny Description</b> : This company is a growing data visualization company and
 									also stepping up as Product based comapny</p>
-								<p><b>Comapny Website</b> : <a href="https://www.techknomatic.com" target="_blank">Click
-										To Open Website</a>
+								<p><b>Comapny Website</b> : 
+									<a href="https://sazingadigital.com/" target="_blank">
+										Sazinga Digital Services Pvt. Ltd</a><br/>
+									<a href="https://www.techknomatic.com" target="_blank">
+										Techknomatic Services Pvt. Ltd</a>
 									<p><b>My Role</b> : Manage all aspects of business requirements and will be
 										responsible for project deliverables which includes but not limited to dashboard
 										design,
@@ -392,7 +398,7 @@
 						<div class="testimonial-item">
 							<!-- Testimonial Content -->
 							<div class="testimonial-content">
-								<p>"Its a Wonderful Developing. Everyone should have to make resume like this, it turns
+								<p>"Its a Wonderful Developing. Everyone should have to make portfolio like this, it turns
 									to digital india."</p>
 							</div>
 							<!-- /Testimonial Content -->
@@ -434,19 +440,19 @@
 				</div>
 				<!-- /testimonials -->
 
-				<div class="page-footer">
+				<div class="page-footer1">
 					<!-- Buttons -->
-					<div class="resume-buttons" style="text-align : center">
+					<!-- <div class="resume-buttons" style="text-align : center"> -->
 						<!-- Download CV button -->
-						<a title="Under Developement" style="cursor: not-allowed"
+						<!-- <a title="Under Developement" style="cursor: not-allowed"
 							class="btn btn-default btn-default2"><i class="fa fa-download"></i>&nbsp; Download
-							my resume</a>
+							my resume</a> -->
 						<!-- /Download CV button -->
 						<!-- Get in Touch button -->
-						<a href="#page-contact" class="btn btn-default btn-default2 link-page"><i
-								class="fa fa-download"></i>&nbsp; Get in Touch</a>
+						<!-- <a href="#page-contact" class="btn btn-default btn-default2 link-page"><i
+								class="fa fa-download"></i>&nbsp; Get in Touch</a> -->
 						<!-- /Get in Touch button -->
-					</div>
+					<!-- </div> -->
 					<!-- /Buttons -->
 					<!-- Quote -->
 					<p class="footer-quote" style="text-align: center">"The best way to predict the future is to create it" </p>
@@ -489,20 +495,8 @@
 									style="width: 95%;">
 									<span class="sr-only">95% Complete</span>
 								</div>
-								<span class="progress-type">Bootstarp 4</span>
+								<span class="progress-type">Bootstarp</span>
 								<span class="progress-completed">95%</span>
-							</div>
-						</li>
-						<!-- /item list -->
-						<!-- item-list -->
-						<li>
-							<div class="progress">
-								<div class="progress-bar progress-bar" data-percent="90%" role="progressbar"
-									style="width: 90%;">
-									<span class="sr-only">90% Complete</span>
-								</div>
-								<span class="progress-type">Javascript</span>
-								<span class="progress-completed">90%</span>
 							</div>
 						</li>
 						<!-- /item list -->
@@ -511,10 +505,34 @@
 							<div class="progress">
 								<div class="progress-bar progress-bar" data-percent="95%" role="progressbar"
 									style="width: 95%;">
-									<span class="sr-only">90% Complete</span>
+									<span class="sr-only">95% Complete</span>
+								</div>
+								<span class="progress-type">Javascript</span>
+								<span class="progress-completed">95%</span>
+							</div>
+						</li>
+						<!-- /item list -->
+						<!-- item-list -->
+						<li>
+							<div class="progress">
+								<div class="progress-bar progress-bar" data-percent="95%" role="progressbar"
+									style="width: 95%;">
+									<span class="sr-only">95% Complete</span>
 								</div>
 								<span class="progress-type">Angular 6,7,8</span>
 								<span class="progress-completed">95%</span>
+							</div>
+						</li>
+						<!-- /item list -->
+						<!-- item-list -->
+						<li>
+							<div class="progress">
+								<div class="progress-bar progress-bar" data-percent="85%" role="progressbar"
+									style="width: 85%;">
+									<span class="sr-only">85% Complete</span>
+								</div>
+								<span class="progress-type">React</span>
+								<span class="progress-completed">85%</span>
 							</div>
 						</li>
 						<!-- /item list -->
@@ -533,12 +551,12 @@
 						<!-- item-list -->
 						<li>
 							<div class="progress">
-								<div class="progress-bar progress-bar" data-percent="40%" role="progressbar"
-									style="width: 40%;">
-									<span class="sr-only">40% Complete</span>
+								<div class="progress-bar progress-bar" data-percent="90%" role="progressbar"
+									style="width: 90%;">
+									<span class="sr-only">90% Complete</span>
 								</div>
 								<span class="progress-type">Node JS</span>
-								<span class="progress-completed">40%</span>
+								<span class="progress-completed">90%</span>
 							</div>
 						</li>
 						<!-- /item list -->
@@ -571,7 +589,7 @@
 									style="width: 80%;">
 									<span class="sr-only">80% Complete</span>
 								</div>
-								<span class="progress-type">Visual Studio Code, Sublime text, Notepad ++ </span>
+								<span class="progress-type">Visual Studio Code, Sublime text,ATOM </span>
 								<span class="progress-completed">80%</span>
 							</div>
 						</li>
@@ -607,7 +625,7 @@
 									style="width: 90%;">
 									<span class="sr-only">90% Complete</span>
 								</div>
-								<span class="progress-type">Version Control Tools - Git and Bit-Bucket </span>
+								<span class="progress-type">Version Control Tools - Git, Git-Lab and Bit-Bucket </span>
 								<span class="progress-completed">90%</span>
 							</div>
 						</li>
@@ -1130,17 +1148,16 @@
 					<div class="map">
 						<div class="map-overlay"></div>
 						<iframe
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d121656.36432076569!2d75.84857682061742!3d17.6614569239549!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc5d082b54ac5d5%3A0x3c719de6c83710d0!2sSolapur%2C+Maharashtra!5e0!3m2!1sen!2sin!4v1484211644184"
+							src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7563.896288232045!2d73.77543762468504!3d18.57637644950585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1600527984525!5m2!1sen!2sin"
 							width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
 					</div>
 
 					<!-- Contact infos -->
 					<div class="contact-infos">
 						<h4 class="contact-subtitle-1"><i class="fa fa-map"></i>&nbsp; Address</h4>
-						<p>95/3A/8, RAVIWAR PETH, SOLAPUR, MAHARASTRA - INDIA</p>
+						<p>Shivam Residency, Balewadi Goan, Balewadi, MAHARASTRA - INDIA</p>
 						<h4 class="contact-subtitle-1"><i class="fa fa-phone-square"></i>&nbsp; Phone</h4>
-						<p>+91 9175399800</p>
+						<p>+91 91-75-399-800</p>
 						<h4 class="contact-subtitle-1"><i class="fa fa-envelope"></i>&nbsp; Mail</h4>
 						<p>iamshubhambhairappa@gmail.com</p>
 					</div>
